# Compressible-Flow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: diamond_polars.py
scratch/: CompressibleFlow.py
src/compressible_flow/: __init__.py  airfoil.py  constants.py  expansions.py  shocks.py
tests/: test_airfoil.py  test_expansions.py  test_shocks.py
