[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compressible-flow"
version = "0.1.0"
description = "Compressible flow utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"numpy>=1.23",
"scipy>=1.10",
]

[project.optional-dependencies]
dev = [
"pytest>=7",
"matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]